# seqrec

./: .gitignore  Cargo.toml  play.ipynb  pyproject.toml  requirements.txt
python/seqrec/: __init__.py  tifuknn.py
src/: lib.rs  row_accumulator.rs  serialize.rs  similar_row.rs  similarity.rs  sparse_topk_index.rs  topk.rs  types.rs  utils.rs
src/algorithms/: mod.rs  tifuknn.rs
