[package]
name = "seqrec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seqrec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.17.3"
numpy = "0.17.2"
sprs = "0.11"
num_cpus = "1.15.0"
rayon = "1.6.1"
ndarray-npy = "0.8.1"
average = "0.13.1"
indicatif = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
core_affinity = "0.7.6"
